--- a/MapKitGame/Base.lproj/Main.storyboard
+++ b/MapKitGame/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14810.11" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14810.11"/>
+        <plugIn identifier="com.apple.MapKitIBPlugin" version="14810.11"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +676,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MapKitGame" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -703,11 +706,56 @@
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MapKitGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TBA-Lm-CTj">
+                                <rect key="frame" x="18" y="228" width="57" height="27"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="HP1-Tw-2xj">
+                                    <font key="font" metaFont="system" size="22"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <mapView misplaced="YES" mapType="satellite" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" showsCompass="NO" showsZoomControls="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-gd-zEj">
+                                <rect key="frame" x="0.0" y="1" width="480" height="215"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="r1v-Fy-lVm"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="XfG-lQ-9wD" id="sTh-j6-YKS"/>
+                                </connections>
+                            </mapView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0li-Xt-yE1">
+                                <rect key="frame" x="414" y="230" width="48" height="26"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Label" id="N8p-ZR-sbZ">
+                                    <font key="font" metaFont="system" size="18"/>
+                                    <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="uuy-gd-zEj" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="2Hc-Ed-iuz"/>
+                            <constraint firstItem="TBA-Lm-CTj" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="15" id="3hu-sn-Dhs"/>
+                            <constraint firstItem="0li-Xt-yE1" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="14" id="6ml-B3-hLg"/>
+                            <constraint firstItem="uuy-gd-zEj" firstAttribute="top" secondItem="0li-Xt-yE1" secondAttribute="bottom" constant="15" id="7OL-Km-0bq"/>
+                            <constraint firstAttribute="trailing" secondItem="uuy-gd-zEj" secondAttribute="trailing" id="Esq-cb-bzI"/>
+                            <constraint firstItem="TBA-Lm-CTj" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="F7l-Kr-IHZ"/>
+                            <constraint firstAttribute="trailing" secondItem="0li-Xt-yE1" secondAttribute="trailing" constant="20" symbolic="YES" id="RZ1-IH-ilz"/>
+                            <constraint firstItem="0li-Xt-yE1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="TBA-Lm-CTj" secondAttribute="trailing" constant="20" id="hhO-ZY-Mys"/>
+                            <constraint firstAttribute="bottom" secondItem="uuy-gd-zEj" secondAttribute="bottom" id="kEV-NA-zli"/>
+                            <constraint firstItem="uuy-gd-zEj" firstAttribute="top" secondItem="TBA-Lm-CTj" secondAttribute="bottom" constant="13" id="kgV-84-ll0"/>
+                            <constraint firstItem="0li-Xt-yE1" firstAttribute="baseline" secondItem="TBA-Lm-CTj" secondAttribute="firstBaseline" id="x1Z-Uy-bIz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="uuy-gd-zEj" id="qOJ-Jj-LOE"/>
+                        <outlet property="questionLabel" destination="TBA-Lm-CTj" id="1VU-c4-VS4"/>
+                        <outlet property="scorelLabel" destination="0li-Xt-yE1" id="sHh-Fy-lKp"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
